scss/main.scss
/* ... */
.toggle-sound {
    float: left;
    margin-left: 10px;
    cursor: pointer;
}

#menu-settings {
    margin-top: 10px;

    & > div {
      float: right;
    }
}

#lightbox-overlay {
    position: fixed;
    left: 0;
    top: 0;
    width: 100%;
    height: 100%;
    background: rgba(0, 0, 0, 0.7);
}

#lightbox-wrap {
    height: 100%;
    overflow-y: scroll;
}

#lightbox-wrap table {
    height: 100%;
    text-align: center;
    margin: auto;
}

#lightbox-content {
    background: #FFF;
    display: table-cell;
    padding: 20px;
    text-align: left;
    max-width: 600px;
    margin: auto;

    .button {
      padding: 15px;
      display: block;
      text-align: center;
    }

    .deathmatch h1 {
        padding: 100px;
        font-size: 60px;
        margin: 0;
    }
}

#player-scores {
    margin: 10px 0 30px 0;

    .title {
        float: left;
        width: 180px;
    }

    .points {
        float: left;
        font-size: 40px;
    }
}

.superpowerCircle {
    height: 7px;
    width: 7px;
    -moz-border-radius: 7px;
    -webkit-border-radius: 7px;
    border-radius: 7px;
    margin-top: 2px;
    margin-right: 2px;
    float: left;
    border: 2px solid $default-theme-superpower-circle-color;

    &.red {
        border: 2px solid $default-theme-red;
    }

    &.green {
        border: 2px solid $default-theme-green;
    }

    &.blue {
        border: 2px solid $default-theme-blue;
    }

    &.orange {
        border: 2px solid $default-theme-orange;
    }

    &.purple {
        border: 2px solid $default-theme-purple;
    }

    &.pink {
        border: 2px solid $default-theme-pink;
    }
}

.superpowers {
    display: flex;
}

.superpower-label {
    font-size: 15px;
    margin-left: 8px;
    line-height: 12px;
    color: $default-theme-superpower-circle-color;
}

#author {
    position: absolute;
    bottom: 15px;
    padding-right: 15px;
    font-size: 11px;
    color: #888;
    line-height: 1.4;

    a,
    a:visited{
        color: #888;
        text-decoration: none;
    }

    a:hover{
       color: #444;
       text-decoration: underline;
    }
}

.key {
    .arrow {
        width: 0;
        height: 0;
        display: block;
        border-style: solid;
    }

    .arrow-left {
        margin: 9px 0 0 9px;
        border-width: 12px 18px 12px 0;
        border-color: transparent $default-theme-orange transparent transparent;
    }

    .arrow-right {
        margin: 9px 0 0 13px;
        border-width: 12px 0 12px 18px;
        border-color: transparent transparent transparent $default-theme-orange;
    }

    .arrow-down {
        margin: 14px 0 0 8px;
        border-width: 18px 12px 0 12px;
        border-color: $default-theme-orange transparent transparent transparent;
    }
}

.inactive .key .arrow-left {
    border-color: transparent #969696 transparent transparent;
}

.inactive .key .arrow-right {
    border-color: transparent transparent transparent #969696;
}

.inactive .key .arrow-down {
    border-color: #969696 transparent transparent transparent;
}

#game-settings {
    position: absolute;
    bottom: 70px;

    #button-menu {
        float: left;
    }
}

#dark-knight {
    background: #222;
    position: absolute;
    left: 0;
    top: 0;
    width: 70%;
    height: 100%;
}

#waiting-host-overlay {
    position: fixed;
    inset: 0;
    background: rgba(0, 0, 0, 0.85);
    display: flex;
    align-items: center;
    justify-content: center;
    z-index: 1000;
    color: #ddd;
    text-align: center;
    font-family: inherit;

    .waiting-host-content {
        max-width: 480px;
        padding: 32px 48px;

        h2 {
            font-size: 32px;
            margin: 0 0 12px;
            font-weight: 600;
        }

        p {
            font-size: 16px;
            opacity: 0.7;
            margin: 0;
        }
    }
}

body:not(.dark-theme) #waiting-host-overlay {
    background: rgba(247, 246, 242, 0.92);
    color: #3F3E37;
}

#lightbox-content .deathmatch h1 {
    -webkit-animation-name: blinker;
    -webkit-animation-duration: 0.3s;
    -webkit-animation-timing-function: linear;
    -webkit-animation-iteration-count: infinite;

    -moz-animation-name: blinker;
    -moz-animation-duration: 0.3s;
    -moz-animation-timing-function: linear;
    -moz-animation-iteration-count: infinite;

    animation-name: blinker;
    animation-duration: 0.3s;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@-moz-keyframes blinker {
    0% { color: #3F3E37; background: #FFF; }
    49% { color: #3F3E37; background: #FFF; }
    50% { color: #FFF; background: #3F3E37; }
    100% { color: #FFF; background: #3F3E37; }
}

@-webkit-keyframes blinker {
    0% { color: #3F3E37; background: #FFF; }
    49% { color: #3F3E37; background: #FFF; }
    50% { color: #FFF; background: #3F3E37; }
    100% { color: #FFF; background: #3F3E37; }
}

@keyframes blinker {
    0% { color: #3F3E37; background: #FFF; }
    49% { color: #3F3E37; background: #FFF; }
    50% { color: #FFF; background: #3F3E37; }
    100% { color: #FFF; background: #3F3E37; }
}

i.arrow {
    border: solid #969696;
    border-width: 0 3px 3px 0;
    display: inline-block;
    padding: 3px;
}

i.arrow-right {
    transform: rotate(-45deg);
    -webkit-transform: rotate(-45deg);
}

i.arrow-left {
    transform: rotate(135deg);
    -webkit-transform: rotate(135deg);
}
/* ... */

